# policast

./: .gitignore  Cargo.toml  README.md
bash/: capture.sh  run.sh
code-examples/: old_caster.rs
src/: alias.rs  bin.rs  broadcaster.rs  capture.rs  capturer.rs  caster.rs  crop.rs  decoder.rs  ffmpeg.rs  gui.rs  hotkey.rs  lib.rs  main.rs  old_player.rs  playback.rs  player.rs  save.rs  screen.rs  server.rs  settings.rs  util.rs  videocaster.rs
src/gui/: caster_settings.rs  hotkey_actions.rs  hotkey_settings.rs  mod.rs  player_controls.rs  select_role.rs  settings.rs
src/gui/caster_controls/: area_selector.rs  device_selector.rs  mod.rs  preview.rs  recording_controls.rs
src/gui/player_controls/: caster_selector.rs  mod.rs
