[package]
name = "mpsc"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpsc"
path = "src/lib.rs"

[[bin]]
name = "mpsc-bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.1"
scap = "0.0.5"
ffmpeg-next = "7.0.2"
image = "0.25.2"
