[package]
name = "mpsc"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpsc"
path = "src/lib.rs"

[[bin]]
name = "mpsc-bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.0"
egui = "0.29.0"
egui_extras ="0.29.1"
local-ip-address = "0.6.1"
regex = "1.10.5"
image = "0.25.2"
refbox = "0.3.0"
