[package]
name = "mpsc"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpsc"
path = "src/lib.rs"

[[bin]]
name = "mpsc-bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.0"
egui = { version = "0.29.0", features = ["serde"] }
egui_extras ="0.29.1"
local-ip-address = "0.6.1"
regex = "1.10.5"
image = "0.25.2"
replace_with = "0.1.7"
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread"] } 
tower-http = { version = "0.6.2", features = ["fs"] }
fraction = "0.15.3"
strum = "0.27.1"
strum_macros = "0.27.1"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
